--- a/canary.html
+++ b/canary.html
@@ -21,16 +21,31 @@
             <li>
                 <a href="rooster.html">most elusive bird</a>
             </li>
+            <li>
+                <a href="bluebird.html">bluebird</a>
+            </li>
         </ul>
     </nav>
     <main>
         <h1>
             <!-- Bird name here -->
+            Canary
         </h1>
         <!-- Description of bird -->
+        <p>
+            Canary is a small, colorful bird that is found in the northern part of the United States.
+        </p>
         <div>
             <!-- Image of bird -->
+            <img src="assets/images/canary.jpg" alt="Picture of Canary">
+            <br>
+            <br>
             <!-- Audio of bird -->
+            <audio controls>
+                <source src="assets/sounds/canary.wav" type="audio/mpeg">
+                <source src="assets/sounds/canary.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
             <div>
                 <h4>Image credit: <a href="https://commons.wikimedia.org/wiki/File:Canary_(Serinus_canaria)_01.jpg">Wikimedia</a> Audio credit: <a href="http://soundbible.com/14-Canary-Singing.html">SoundBible</a></h4>
             </div>
