--- a/index.html
+++ b/index.html
@@ -21,8 +21,28 @@
             <li>
                 <a href="rooster.html">most elusive bird</a>
             </li>
+            <li>
+                <a href="bluebird.html">bluebird</a>
+            </li>
         </ul>
     </nav>
     <!-- Add main tag here -->
+    <main>
+        <h1>Bird Songs</h1>
+        <ul>
+            <li>
+                <a href="meadowlark.html">Meadowlark</a>
+            </li>
+            <li>
+                <a href="canary.html">Canary</a>
+            </li>
+            <li>
+                <a href="rooster.html">Rooster</a>
+            </li>
+            <li>
+                <a href="bluebird.html">Bluebird</a>
+            </li>
+        </ul>
+    </main>
 </body>
 </html>
