--- a/rooster.html
+++ b/rooster.html
@@ -21,16 +21,32 @@
             <li>
                 <a href="rooster.html" class="current-page">most elusive bird</a>
             </li>
+            <li>
+                <a href="bluebird.html">bluebird</a>
+            </li>
         </ul>
     </nav>
     <main>
         <h1>
             <!-- Bird name here -->
+            Rooster
         </h1>
         <!-- Description of bird -->
+        <p>
+            The rooster is a large, dark-brown bird with a white face and a black body. It has a long, thin tail.
+            The rooster is a migratory bird that is found in the northern and eastern parts of the world.
+            The rooster is a member of the family Corvidae.
+        </p>
         <div>
             <!-- Image of bird -->
+            <img src="assets/images/rooster.jpg" alt="Picture of rooster">
+            <br>
+            <br>
             <!-- Audio of bird -->
+            <audio controls>
+                <source src="assets/sounds/rooster.wav" type="audio/mpeg">
+                <source src="assets/sounds/rooster.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
             <div>
                 <h4>Image credit: <a href="https://www.pickpik.com/animal-avian-bird-feathers-macro-poultry-8199">PickPik</a> Audio credit: <a href="http://soundbible.com/2040-Rooster-Crowing-2.html ">SoundBible</a></h4>
             </div>
@@ -38,6 +54,7 @@
         <div>
             <h2>Video on Youtube</h2>
             <!-- video/iframe here -->
+            <iframe width="739" height="416" src="https://www.youtube.com/embed/IhNcw2AYi_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </main>
 </body>
