--- a/meadowlark.html
+++ b/meadowlark.html
@@ -21,16 +21,31 @@
             <li>
                 <a href="rooster.html">most elusive bird</a>
             </li>
+            <li>
+                <a href="bluebird.html">bluebird</a>
+            </li>
         </ul>
     </nav>
     <main>
         <h1>
             <!-- Bird name here -->
+            Meadowlark
         </h1>
         <!-- Description of bird -->
+        <p>
+            The Western Meadowlark is the size of a robin but chunkier and shorter-tailed, with a flat head, long, slender bill, and a round-shouldered posture that nearly conceals its neck. The wings are rounded and short for the bird's size and the tail is short, stiff, and spiky.
+        </p>
         <div>
             <!-- Image of bird -->
+            <img src="assets/images/western-meadowlark.jpg" alt="Picture of Meadowlark">
+            <br>
+            <br>
             <!-- Audio of bird -->
+            <audio controls>
+                <source src="assets/sounds/meadowlark.wav" type="audio/mpeg">
+                <source src="assets/sounds/meadowlark.mp3" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
             <div>
                 <h4>Image credit: <a href="https://commons.wikimedia.org/wiki/File:Western_Meadowlark_-_Oregon_-_USA_S4E9863_(23593630930).jpg">Wikimedia</a> Audio credit: <a href="http://soundbible.com/2180-Meadowlark.html">SoundBible</a></h4>
             </div>
@@ -38,6 +53,8 @@
         <div>
             <h2>Video on Youtube</h2>
             <!-- video iframe here -->
+            <iframe width="744" height="419" src="https://www.youtube.com/embed/3o0FC7aqg94" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            
         </div>
     </main>
 </body>
